# Android_adb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  git_clone.txt
.github/workflows/: cmake-single-platform.yml
adb/: CMakeLists.txt  adb.cpp  adb.h  adb_utils.cpp  adb_utils.h  services.cpp  socket_spec.cpp
adb/client/: adb_client.cpp  commandline.cpp  fastdeploy.cpp  incremental.cpp  main.cpp  transport_usb.cpp  usb.h  usb_android.cpp  usb_libusb_android.cpp
adb/fastdeploy/: CMakeLists.txt  bin2c.ps1
adb/fastdeploy/proto/: ApkEntry.pb.h  CMakeLists.txt
adb/fastdeploy/proto/com/android/fastdeploy/: APKDump.java  APKEntry.java  APKMetaData.java
adb/proto/: CMakeLists.txt  adb_host.pb.cc  adb_host.pb.h  adb_known_hosts.pb.h  app_processes.pb.cc  app_processes.pb.h  key_type.pb.h  pairing.pb.h
base/libs/androidfw/: CMakeLists.txt
core/: CMakeLists.txt
core/diagnose_usb/: CMakeLists.txt
core/libcrypto_utils/: CMakeLists.txt
core/libcutils/: CMakeLists.txt
core/libsystem/: CMakeLists.txt
core/libutils/: CMakeLists.txt
core/libutils/include/utils/: Errors.h  LightRefBase.h  RefBase.h  String16.h  String8.h  StrongPointer.h  TypeHelpers.h  Unicode.h  Vector.h  VectorImpl.h
incremental_delivery/incfs/: CMakeLists.txt
libbase/: CMakeLists.txt  properties.cpp
libbase/include/android-base/: properties.h
libusb/: CMakeLists.txt
libziparchive/: CMakeLists.txt  zip_archive.cc  zip_archive_stream_entry.cc  zip_cd_entry_map.cc  zip_writer.cc
log/: CMakeLists.txt
log/include/log/: log.h
native/libs/binder/: CMakeLists.txt
